tests/ui/parser/type-parameters-in-field-exprs.stderr
error: field expressions cannot have generic arguments
  --> $DIR/type-parameters-in-field-exprs.rs:11:10
   |
LL |     f.x::<isize>;
   |          ^^^^^^^

error: field expressions cannot have generic arguments
  --> $DIR/type-parameters-in-field-exprs.rs:13:10
   |
LL |     f.x::<>;
   |          ^^

error: field expressions cannot have generic arguments
  --> $DIR/type-parameters-in-field-exprs.rs:15:7
   |
LL |     f.x::();
   |       ^^^^^

error: aborting due to 3 previous errors

